// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelField renders with structure-level 1`] = `
<DocumentFragment>
  <div
    class="form-renderer-label-field d-flex justify-content-between"
  >
    <div
      class="form-group form-renderer-label-field__input"
    >
      <label
        class="ddm-label"
      >
        Label
        <span
          class="ddm-tooltip"
        >
          <svg
            class="lexicon-icon lexicon-icon-question-circle-full"
            role="presentation"
            title="Enter a descriptive field label that guides users to enter the information you want."
          >
            <use
              xlink:href="#question-circle-full"
            />
          </svg>
        </span>
      </label>
      <input
        class="form-control ddm-field-text"
        name="LabelName"
        placeholder="Enter a field label."
        type="text"
        value="Name"
      />
    </div>
    <button
      class="form-renderer-label-field__button btn btn-monospaced btn-outline-borderless btn-sm btn-outline-secondary"
      title="label-options"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-ellipsis-v"
        role="presentation"
      >
        <use
          xlink:href="#ellipsis-v"
        />
      </svg>
    </button>
    <div
      class="form-renderer-label-field__popover popover clay-popover-bottom-right"
    >
      <div
        class="arrow"
      />
      <div
        class="inline-scroller"
        tabindex="-1"
      >
        <div
          class="popover-header"
        >
          label-options
        </div>
        <div
          class="popover-body"
        >
          <div
            class="mt-2"
          >
            <div
              class=""
            >
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    checked=""
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="structure-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label-for-all-forms-using-this-field
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="view-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label-for-only-this-form
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelField renders with view-level 1`] = `
<DocumentFragment>
  <div
    class="form-renderer-label-field d-flex justify-content-between"
  >
    <div
      class="form-group form-renderer-label-field__input"
    >
      <label
        class="ddm-label"
      >
        Label
        <span
          class="ddm-tooltip"
        >
          <svg
            class="lexicon-icon lexicon-icon-question-circle-full"
            role="presentation"
            title="Enter a descriptive field label that guides users to enter the information you want."
          >
            <use
              xlink:href="#question-circle-full"
            />
          </svg>
        </span>
      </label>
      <input
        class="form-control ddm-field-text"
        name="LabelName"
        placeholder="Enter a field label."
        type="text"
        value="Username"
      />
      <div
        class="form-feedback-group"
      >
        <div
          class="form-feedback-item"
        >
          object-field-label-x
        </div>
      </div>
    </div>
    <button
      class="form-renderer-label-field__button btn btn-monospaced btn-outline-borderless btn-sm btn-outline-secondary"
      title="label-options"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-ellipsis-v"
        role="presentation"
      >
        <use
          xlink:href="#ellipsis-v"
        />
      </svg>
    </button>
    <div
      class="form-renderer-label-field__popover popover clay-popover-bottom-right"
    >
      <div
        class="arrow"
      />
      <div
        class="inline-scroller"
        tabindex="-1"
      >
        <div
          class="popover-header"
        >
          label-options
        </div>
        <div
          class="popover-body"
        >
          <div
            class="mt-2"
          >
            <div
              class=""
            >
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="structure-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label-for-all-forms-using-this-field
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-radio"
              >
                <label>
                  <input
                    checked=""
                    class="custom-control-input"
                    role="radio"
                    type="radio"
                    value="view-level"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label-for-only-this-form
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
